--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "standard"
+    "lint": "standard",
+    "test": "vitest"
   },
   "dependencies": {
     "firebase": "^9.6.1",
@@ -14,9 +15,13 @@
     "standard": "^17.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "12.1.5",
+    "@vitejs/plugin-react": "3.1.0",
     "autoprefixer": "^10.4.0",
+    "happy-dom": "8.9.0",
     "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
+    "vitest": "0.29.7"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
