--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "standard",
-    "test": "vitest"
+    "test": "vitest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "firebase": "^9.6.1",
@@ -15,6 +16,7 @@
     "standard": "^17.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.32.1",
     "@testing-library/react": "12.1.5",
     "@vitejs/plugin-react": "3.1.0",
     "autoprefixer": "^10.4.0",
